--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "wowjs": "^1.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
