--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ek-konsult",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.13.6"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -21,7 +25,7 @@
     "wowjs": "^1.1.3"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
