--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "wowjs": "^1.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
